--- a/bookdownproj.html
+++ b/bookdownproj.html
@@ -23,6 +23,7 @@
 <meta name="author" content="Vásquez V., C.R.A." />
 
 
+<meta name="date" content="2022-05-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -67,7 +68,7 @@
 <h1 class="title">Aplicación del modelo lineal general</h1>
 <h2 class="subtitle"><em>Recuento de escarabajos en un área</em></h2>
 <p class="author"><em>Vásquez V., C.R.A.</em></p>
-<p class="date"><em>30/07/2021</em></p>
+<p class="date"><em>2022-05-07</em></p>
 </div>
 <!--bookdown:title:end-->
 
@@ -414,7 +415,7 @@ Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&
 <h2 class="hasAnchor"><span class="header-section-number">3.3</span> Partición inicial de la base de datos<a href="#partición-inicial-de-la-base-de-datos-2" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="verificación-de-la-distribución-de-la-variable-respuesta-recuento" class="section level3 hasAnchor" number="3.3.1">
 <h3 class="hasAnchor"><span class="header-section-number">3.3.1</span> Verificación de la distribución de la variable respuesta (Recuento)<a href="#verificación-de-la-distribución-de-la-variable-respuesta-recuento" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-12-1.png" width="220px" style="display: block; margin: auto;" /></p>
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-12-1.png" width="800px" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="forward" class="section level2 hasAnchor" number="3.4">
@@ -451,14 +452,14 @@ F-statistic: 1.164e+04 on 3 and 157 DF,  p-value: &lt; 0.00000000000000022</code
 <h2 class="hasAnchor"><span class="header-section-number">3.5</span> Forward<a href="#forward-1" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="coeficientes-del-modelo" class="section level3 hasAnchor" number="3.5.1">
 <h3 class="hasAnchor"><span class="header-section-number">3.5.1</span> Coeficientes del modelo<a href="#coeficientes-del-modelo" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-15-1.png" width="220px" style="display: block; margin: auto;" /></p>
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-15-1.png" width="800px" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="forward-2" class="section level2 hasAnchor" number="3.6">
 <h2 class="hasAnchor"><span class="header-section-number">3.6</span> Forward<a href="#forward-2" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="vif-de-las-variables-seleccionadas" class="section level3 hasAnchor" number="3.6.1">
 <h3 class="hasAnchor"><span class="header-section-number">3.6.1</span> VIF de las variables seleccionadas<a href="#vif-de-las-variables-seleccionadas" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<pre><code>     Altura Temperatura    UrbanoSí 
+<pre><code>     Altura Temperatura      Urbano 
    1.008899    1.003479    1.012153 </code></pre>
 </div>
 <div id="mse-del-entrenamiento" class="section level3 hasAnchor" number="3.6.2">
@@ -505,14 +506,14 @@ F-statistic: 1.164e+04 on 3 and 157 DF,  p-value: &lt; 0.00000000000000022</code
 <h2 class="hasAnchor"><span class="header-section-number">3.8</span> Backward<a href="#backward-1" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="coeficientes-del-modelo-1" class="section level3 hasAnchor" number="3.8.1">
 <h3 class="hasAnchor"><span class="header-section-number">3.8.1</span> Coeficientes del modelo<a href="#coeficientes-del-modelo-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-21-1.png" width="220px" style="display: block; margin: auto;" /></p>
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-21-1.png" width="800px" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="backward-2" class="section level2 hasAnchor" number="3.9">
 <h2 class="hasAnchor"><span class="header-section-number">3.9</span> Backward<a href="#backward-2" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="vif-de-las-variables-seleccionadas-1" class="section level3 hasAnchor" number="3.9.1">
 <h3 class="hasAnchor"><span class="header-section-number">3.9.1</span> VIF de las variables seleccionadas<a href="#vif-de-las-variables-seleccionadas-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<pre><code>Temperatura      Altura    UrbanoSí 
+<pre><code>Temperatura      Altura      Urbano 
    1.003479    1.008899    1.012153 </code></pre>
 </div>
 <div id="mse-del-entrenamiento-1" class="section level3 hasAnchor" number="3.9.2">
@@ -558,7 +559,7 @@ F-statistic: 1.705e+04 on 2 and 158 DF,  p-value: &lt; 0.00000000000000022</code
 <h2 class="hasAnchor"><span class="header-section-number">3.11</span> Stepwise<a href="#stepwise-1" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="coeficientes-del-modelo-2" class="section level3 hasAnchor" number="3.11.1">
 <h3 class="hasAnchor"><span class="header-section-number">3.11.1</span> Coeficientes del modelo<a href="#coeficientes-del-modelo-2" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-27-1.png" width="220px" style="display: block; margin: auto;" /></p>
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-27-1.png" width="800px" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="stepwise-2" class="section level2 hasAnchor" number="3.12">
@@ -677,36 +678,36 @@ Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&
 <h2 class="hasAnchor"><span class="header-section-number">4.5</span> Análisis de supuestos<a href="#análisis-de-supuestos" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="valores-predichos-vs-residuos" class="section level3 hasAnchor" number="4.5.1">
 <h3 class="hasAnchor"><span class="header-section-number">4.5.1</span> Valores predichos vs Residuos<a href="#valores-predichos-vs-residuos" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-35-1.png" width="220px" style="display: block; margin: auto;" /></p>
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-35-1.png" width="800px" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="análisis-de-supuestos-1" class="section level2 hasAnchor" number="4.6">
 <h2 class="hasAnchor"><span class="header-section-number">4.6</span> Análisis de supuestos<a href="#análisis-de-supuestos-1" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="gráfico-de-probabilidad-normal-de-residuos" class="section level3 hasAnchor" number="4.6.1">
 <h3 class="hasAnchor"><span class="header-section-number">4.6.1</span> Gráfico de probabilidad normal de residuos<a href="#gráfico-de-probabilidad-normal-de-residuos" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-36-1.png" width="220px" style="display: block; margin: auto;" />
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-36-1.png" width="800px" style="display: block; margin: auto;" />
 ## Análisis de supuestos</p>
 </div>
 <div id="valores-predichos-vs-raíz-de-los-residuos-estandarizados-absolutos" class="section level3 hasAnchor" number="4.6.2">
 <h3 class="hasAnchor"><span class="header-section-number">4.6.2</span> Valores predichos vs Raíz de los residuos estandarizados absolutos<a href="#valores-predichos-vs-raíz-de-los-residuos-estandarizados-absolutos" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-37-1.png" width="220px" style="display: block; margin: auto;" />
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-37-1.png" width="800px" style="display: block; margin: auto;" />
 ## Análisis de supuestos</p>
 </div>
 <div id="leverage-vs-residuos-estandarizados" class="section level3 hasAnchor" number="4.6.3">
 <h3 class="hasAnchor"><span class="header-section-number">4.6.3</span> Leverage vs Residuos estandarizados<a href="#leverage-vs-residuos-estandarizados" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-38-1.png" width="220px" style="display: block; margin: auto;" />
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-38-1.png" width="800px" style="display: block; margin: auto;" />
 ## Análisis de supuestos</p>
 </div>
 <div id="distancias-de-cook" class="section level3 hasAnchor" number="4.6.4">
 <h3 class="hasAnchor"><span class="header-section-number">4.6.4</span> Distancias de Cook<a href="#distancias-de-cook" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-39-1.png" width="220px" style="display: block; margin: auto;" /></p>
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-39-1.png" width="800px" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="análisis-de-supuestos-2" class="section level2 hasAnchor" number="4.7">
 <h2 class="hasAnchor"><span class="header-section-number">4.7</span> Análisis de supuestos<a href="#análisis-de-supuestos-2" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="distancias-de-cook-vs-leverage" class="section level3 hasAnchor" number="4.7.1">
 <h3 class="hasAnchor"><span class="header-section-number">4.7.1</span> Distancias de Cook vs Leverage<a href="#distancias-de-cook-vs-leverage" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-40-1.png" width="220px" style="display: block; margin: auto;" /></p>
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-40-1.png" width="800px" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="análisis-de-supuestos-3" class="section level2 hasAnchor" number="4.8">
@@ -806,14 +807,14 @@ BP = 5.4705, df = 2, p-value = 0.06488</code></pre>
 <h2 class="hasAnchor"><span class="header-section-number">4.14</span> Análisis de supuestos<a href="#análisis-de-supuestos-9" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="prueba-de-hipótesis-para-la-autocorrelación-de-residuos-1" class="section level3 hasAnchor" number="4.14.1">
 <h3 class="hasAnchor"><span class="header-section-number">4.14.1</span> Prueba de hipótesis para la autocorrelación de residuos<a href="#prueba-de-hipótesis-para-la-autocorrelación-de-residuos-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-45-1.png" width="220px" style="display: block; margin: auto;" /></p>
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-45-1.png" width="800px" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="análisis-de-supuestos-10" class="section level2 hasAnchor" number="4.15">
 <h2 class="hasAnchor"><span class="header-section-number">4.15</span> Análisis de supuestos<a href="#análisis-de-supuestos-10" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="prueba-de-hipótesis-para-la-autocorrelación-de-residuos-2" class="section level3 hasAnchor" number="4.15.1">
 <h3 class="hasAnchor"><span class="header-section-number">4.15.1</span> Prueba de hipótesis para la autocorrelación de residuos<a href="#prueba-de-hipótesis-para-la-autocorrelación-de-residuos-2" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><img src="bookdownproj_files/figure-html/unnamed-chunk-46-1.png" width="220px" style="display: block; margin: auto;" />
+<p><img src="bookdownproj_files/figure-html/unnamed-chunk-46-1.png" width="800px" style="display: block; margin: auto;" />
 ## Análisis de supuestos</p>
 </div>
 <div id="prueba-de-hipótesis-para-la-autocorrelación-de-residuos-3" class="section level3 hasAnchor" number="4.15.2">
